--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -115,7 +115,7 @@
       }
       #imgProfil {
         @include transition;
-        height: 130px;
+        height: 220px;
         border: 3px solid grey;
         border-radius: 50%;
         margin-bottom: 10px;
@@ -124,12 +124,17 @@
       .infosPerso {
         width: 95%;
         .profilGrid {
+          // background-color: rgb(216, 215, 215);
+          // border-radius: 15px;
           display: grid;
           grid-template-columns: 3fr 5fr 1fr;
           div {
-            padding: 10px;
-            border-bottom: 3px solid rgb(211, 210, 210);
-            margin: 5px 0 15px 0;
+            padding: 15px;
+            @include boxShadow;
+            background-color: rgb(231, 228, 228);
+            // border-radius: 15px;
+            // border-bottom: 3px solid rgb(255, 255, 255);
+            margin: 5px 0 5px 0;
           }
           .lienModif {
             margin-right: 15px;
