--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -149,11 +149,48 @@
     }
     .acceuil-container {
       @include box;
-      @include flexCenter;
-      padding: 0 20px 40px 20px;
+      padding: 10px 20px 20px 20px;
       width: 85%;
       @media (min-width: 850px) {
         width: 70%;
+      }
+      .posts-container {
+        form {
+          .post {
+            @include input;
+            background-color: rgb(233, 227, 227) !important;
+            height: 100px;
+            width: 100%;
+            box-sizing: border-box;
+            padding: 15px;
+            font-size: 170%;
+            resize: none;
+            overflow: hidden;
+            &:focus {
+              outline: none;
+            }
+          }
+          div {
+            .submitPost {
+              width: 100px;
+              @include btn;
+              background-color: $color-2;
+              padding: 10px;
+            }
+            .fa-image {
+              font-size: 250%;
+              transform: translate(50%, 26%);
+              color: grey;
+              opacity: 0.7;
+            }
+            .imagePost {
+              opacity: 0;
+              width: 40px;
+              height: 30px;
+              transform: translate(-50%, 0);
+            }
+          }
+        }
       }
     }
   }
