--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -102,6 +102,11 @@
           @include btn;
           @include boxShadow;
         }
+        #inscriptError,
+        #connectError {
+          color: red;
+          font-style: oblique;
+        }
       }
     }
     .profil-container {
@@ -114,9 +119,8 @@
         @include transition;
       }
       #imgProfil {
-        @include transition;
         height: 220px;
-        border: 3px solid grey;
+        @include boxShadow;
         border-radius: 50%;
         margin-bottom: 10px;
       }
