--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -120,30 +120,34 @@
       }
       #imgProfil {
         height: 220px;
-        @include boxShadow;
         border-radius: 50%;
         margin-bottom: 10px;
       }
       .infosPublic,
       .infosPerso {
         width: 95%;
-        .profilGrid {
-          // background-color: rgb(216, 215, 215);
-          // border-radius: 15px;
-          display: grid;
-          grid-template-columns: 3fr 5fr 1fr;
-          div {
-            padding: 15px;
-            @include boxShadow;
-            background-color: rgb(231, 228, 228);
-            // border-radius: 15px;
-            // border-bottom: 3px solid rgb(255, 255, 255);
-            margin: 5px 0 5px 0;
+        .entete {
+          display: flex;
+          justify-content: space-between;
+          h3 {
+            margin-bottom: 20px;
+            font-size: 130%;
           }
           .lienModif {
-            margin-right: 15px;
+            transform: translate(0, 40%);
             cursor: pointer;
             color: rgb(51, 51, 233);
+            margin-right: 15px;
+          }
+        }
+        .profilGrid {
+          background-color: $color-3;
+          border-radius: 15px;
+          display: grid;
+          grid-template-columns: 3fr 5fr;
+          div {
+            padding: 15px;
+            margin: 5px 0 5px 0;
           }
         }
       }
@@ -152,13 +156,14 @@
       }
     }
     .acceuil-container {
-      @include box;
-      padding: 10px 20px 20px 20px;
       width: 85%;
       @media (min-width: 850px) {
-        width: 70%;
+        width: 60%;
       }
-      .posts-container {
+      .post-container {
+        @include box;
+        padding: 10px 20px 20px 20px;
+        margin-bottom: 30px;
         form {
           .post {
             @include input;
@@ -194,6 +199,15 @@
               transform: translate(-50%, 0);
             }
           }
+        }
+        .post-pseudo {
+          font-weight: bold;
+          margin: 10px 0 10px 0;
+        }
+        .post-image {
+          width: 100%;
+          border-radius: 10px;
+          margin-bottom: 10px;
         }
       }
     }
