--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -118,10 +118,14 @@
         width: 70%;
         @include transition;
       }
-      #imgProfil {
-        height: 220px;
-        border-radius: 50%;
-        margin-bottom: 10px;
+      #img-container {
+        @include flexCenter;
+        #imgProfil {
+          border: 3px solid $color-3;
+          width: 250px;
+          border-radius: 50%;
+          margin-bottom: 10px;
+        }
       }
       .infosPublic,
       .infosPerso {
