--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -204,14 +204,34 @@
             }
           }
         }
-        .post-pseudo {
-          font-weight: bold;
-          margin: 10px 0 10px 0;
+        .post-head-container {
+          display: flex;
+          justify-content: space-between;
+          .post-pseudo {
+            font-size: 130%;
+            font-weight: bold;
+            margin: 10px 0 10px 0;
+          }
+          p {
+            font-style: italic;
+            color: grey;
+          }
         }
-        .post-image {
+        #post-image {
           width: 100%;
           border-radius: 10px;
           margin-bottom: 10px;
+          // display: none;
+        }
+        .activ-img {
+          display: block !important;
+        }
+        .post-modif-container {
+          display: flex;
+          justify-content: end;
+          button {
+            margin: 30px 5px 0 5px;
+          }
         }
       }
     }
