modif style publications

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -282,7 +282,11 @@
             font-style: italic;
             color: grey;
             font-size: 80%;
+            margin-bottom: 20px;
           }
+        }
+        .publication {
+          margin: 15px 0 30px 0;
         }
         #post-image {
           width: 100%;
