--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -348,6 +348,9 @@
             }
           }
         }
+        #input-modif-post {
+          margin-top: 20px;
+        }
       }
       #getComment-container {
         margin-top: 20px;
