--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -54,22 +54,27 @@
     }
   }
   .session {
-    background-color: white;
-    z-index: 4;
+    display: flex;
+    justify-content: end;
     position: fixed;
-    padding: 10px 30px 10px 30px;
     bottom: 1px;
+    z-index: 4;
+    background-color: white;
+    padding: 5px;
     width: 100%;
     color: $color-2;
     font-weight: bold;
     font-style: italic;
+    div {
+      width: 130px;
+    }
   }
   main {
     z-index: 2;
     margin-bottom: 30px;
     @include flexCenter;
     .login-container {
-      margin-top: 100px;
+      margin-top: 150px;
       @include flexCenter;
       @include box;
       padding: 10px 20px 40px 20px;
