--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -312,6 +312,24 @@ html {
         .post-head-container {
           .pseudo-container {
             display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            figure {
+              margin: 0 15px 0 0;
+              width: 50px;
+              height: 50px;
+              position: relative;
+              img {
+                top: 0;
+                left: 0;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                object-fit: cover;
+                object-position: center;
+              }
+            }
             .post-pseudo {
               font-size: 130%;
               font-weight: bold;
