--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -130,7 +130,7 @@ html {
     .profil-container {
       @include flexCenter;
       @include box;
-      padding: 0 0 40px 15px;
+      padding: 0 0 40px 0;
       #img-container {
         @include flexCenter;
         figure {
@@ -314,8 +314,10 @@ html {
             display: flex;
             align-items: center;
             justify-content: flex-start;
+            margin: 0;
+            padding: 0;
             figure {
-              margin: 0 15px 0 0;
+              margin: 10px 15px 0 0;
               width: 50px;
               height: 50px;
               position: relative;
@@ -331,22 +333,21 @@ html {
               }
             }
             .post-pseudo {
-              font-size: 130%;
-              font-weight: bold;
-              margin: 10px 0 10px 0;
+              h3 {
+                font-size: 130%;
+                font-weight: bold;
+                margin: 10px 0 10px 0;
+                &:hover {
+                  text-decoration: underline;
+                }
+              }
+              p {
+                color: grey;
+                font-size: 90%;
+                margin: 0;
+                padding: 0;
+              }
             }
-            a div {
-              color: grey;
-              color: grey;
-              font-size: 80%;
-              margin: 17px;
-            }
-          }
-          p {
-            font-style: italic;
-            color: grey;
-            font-size: 90%;
-            margin-bottom: 20px;
           }
         }
         .publication {
